<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/title"
        android:textSize="30sp"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="300dp"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/images_gif" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/summary"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/order_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:strokeColor="@color/blue"
            app:strokeWidth="3dp"
            android:text="@string/order" />

        <Button
            android:id="@+id/get_tickets_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:strokeColor="@color/blue"
            app:strokeWidth="3dp"
            android:text="@string/get_tickets"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>